k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        alb.ingress.kubernetes.io/healthcheck-path: /api/health
    spec:
      containers:
      - name: backend
        image: 154864927037.dkr.ecr.ap-southeast-2.amazonaws.com/node-backend:latest
        ports:
        - containerPort: 5001
      imagePullSecrets:
      - name: ecr-auth
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-port: '5001'
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5001
  type: LoadBalancer
